--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -112,8 +112,7 @@ jobs:
           - runtime: python
             version: 3.13
 
-    rules:
-      - if: github.ref == 'refs/heads/main' && github.event_name == 'schedule'
+    if: github.ref == 'refs/heads/main' && github.event_name == 'schedule'
 
     steps:
       - name: Authenticate with AWS
