--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -12,6 +12,10 @@ jobs:
   build-images:
     runs-on: ubuntu-latest
 
+    permissions:
+      contents: read
+      id-token: write
+
     strategy:
       matrix:
         image:
@@ -63,6 +67,10 @@ jobs:
     needs:
       - build-images
 
+    permissions:
+      contents: read
+      id-token: write
+
     strategy:
       matrix:
         image:
@@ -99,6 +107,10 @@ jobs:
 
     needs:
       - verify-images
+
+    permissions:
+      contents: read
+      id-token: write
 
     strategy:
       matrix:
