--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -31,6 +31,7 @@ jobs:
             version: 3.12
           - runtime: python
             version: 3.13
+      fail-fast: false
 
     steps:
       - name: Checkout
@@ -49,14 +50,13 @@ jobs:
       - name: Build, tag, and push draft image to Amazon ECR
         env:
           REGISTRY: ${{ steps.login_to_ecr.outputs.registry }}
-          IMAGE_TAG: draft-${VERSION}-${{ github.sha }}
           RUNTIME: ${{ matrix.image.runtime }}
           VERSION: ${{ matrix.image.version }}
         working-directory: runtimes/${{ matrix.image.runtime }}
         run: |
           docker buildx build \
             --platform linux/amd64,linux/arm64 \
-            --tag ${REGISTRY}/${RUNTIME}:${IMAGE_TAG} \
+            --tag ${REGISTRY}/${RUNTIME}:draft-${VERSION}-${{ github.sha }} \
             --build-arg RUNTIME=${RUNTIME} \
             --build-arg VERSION=${VERSION} \
             .
@@ -82,6 +82,7 @@ jobs:
             version: 3.12
           - runtime: python
             version: 3.13
+      fail-fast: false
 
     steps:
       - name: Authenticate with AWS
@@ -97,10 +98,9 @@ jobs:
       - name: Run verification script
         env:
           REGISTRY: ${{ steps.login_to_ecr.outputs.registry }}
-          IMAGE_TAG: draft-${VERSION}-${{ github.sha }}
           RUNTIME: ${{ matrix.image.runtime }}
           VERSION: ${{ matrix.image.version }}
-        run: docker run --entrypoint self-test ${REGISTRY}/${RUNTIME}:${IMAGE_TAG}
+        run: docker run --entrypoint self-test ${REGISTRY}/${RUNTIME}:draft-${VERSION}-${{ github.sha }}
 
   push-images:
     runs-on: ubuntu-latest
@@ -123,6 +123,7 @@ jobs:
             version: 3.12
           - runtime: python
             version: 3.13
+      fail-fast: false
 
     if: github.ref == 'refs/heads/main' && github.event_name == 'schedule'
 
@@ -140,9 +141,8 @@ jobs:
       - name: Publish Docker image without draft prefix
         env:
           REGISTRY: ${{ steps.login_to_ecr.outputs.registry }}
-          DRAFT_IMAGE_TAG: draft-${VERSION}-${{ github.sha }}
           RUNTIME: ${{ matrix.image.runtime }}
           VERSION: ${{ matrix.image.version }}
         run: |
-          docker tag ${REGISTRY}/${RUNTIME}:${DRAFT_IMAGE_TAG} ${REGISTRY}/${RUNTIME}:${VERSION}
+          docker tag ${REGISTRY}/${RUNTIME}:draft-${{ matrix.image.version }}-${{ github.sha }} ${REGISTRY}/${RUNTIME}:${VERSION}
           docker push ${REGISTRY}/${RUNTIME}:${VERSION}
