--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -47,6 +47,12 @@ jobs:
         id: login_to_ecr
         uses: aws-actions/amazon-ecr-login@v2
 
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@v3
+
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
+
       - name: Build, tag, and push draft image to Amazon ECR
         env:
           REGISTRY: ${{ steps.login_to_ecr.outputs.registry }}
