Push image after building.

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -65,6 +65,7 @@ jobs:
             --tag ${REGISTRY}/${RUNTIME}:draft-${VERSION}-${{ github.sha }} \
             --build-arg RUNTIME=${RUNTIME} \
             --build-arg VERSION=${VERSION} \
+            --push \
             .
 
   verify-images:
