--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -140,7 +140,7 @@ jobs:
             version: 3.12
       fail-fast: false
 
-    if: github.ref == 'refs/heads/main' && github.event_name == 'schedule'
+    if: (github.event_name == 'push' && github.ref == 'refs/heads/main') || github.event_name == 'schedule'
 
     steps:
       - name: Authenticate with AWS
