Avoid push/pull of image when adding a new tag.

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -162,5 +162,5 @@ jobs:
           RUNTIME: ${{ matrix.image.runtime }}
           VERSION: ${{ matrix.image.version }}
         run: |
-          docker tag ${REGISTRY}/${RUNTIME}:draft-${{ matrix.image.version }}-${{ github.sha }} ${REGISTRY}/${RUNTIME}:${VERSION}
-          docker push ${REGISTRY}/${RUNTIME}:${VERSION}
+          docker manifest create ${REGISTRY}/${RUNTIME}:draft-${{ matrix.image.version }}-${{ github.sha }} ${REGISTRY}/${RUNTIME}:${VERSION}
+          docker manifest push ${REGISTRY}/${RUNTIME}:${VERSION}
