--- a/codebuild-build.yml
+++ b/codebuild-build.yml
@@ -4,7 +4,6 @@ batch:
   fast-fail: false
   build-graph:
     - identifier: node-18
-      buildspec: codebuild-build-inner.yml
       env:
         variables:
           RUNTIME: node
@@ -12,7 +11,6 @@ batch:
       ignore-failure: false
 
     - identifier: node-20
-      buildspec: codebuild-build-inner.yml
       env:
         variables:
           RUNTIME: node
@@ -20,7 +18,6 @@ batch:
       ignore-failure: false
 
     - identifier: node-ci-cd-18
-      buildspec: codebuild-build-inner.yml
       env:
         variables:
           RUNTIME: node-ci-cd
@@ -28,7 +25,6 @@ batch:
       ignore-failure: false
 
     - identifier: node-ci-cd-20
-      buildspec: codebuild-build-inner.yml
       env:
         variables:
           RUNTIME: node
@@ -36,7 +32,6 @@ batch:
       ignore-failure: false
 
     - identifier: python-3.11
-      buildspec: codebuild-build-inner.yml
       env:
         variables:
           RUNTIME: python
@@ -44,9 +39,28 @@ batch:
       ignore-failure: false
 
     - identifier: python-3.12
-      buildspec: codebuild-build-inner.yml
       env:
         variables:
           RUNTIME: python
           VERSION: 3.12
       ignore-failure: false
+
+phases:
+  pre_build:
+    commands:
+      - echo Login in to Amazon ECR
+      - aws ecr get-login-password --region eu-west-1 | docker login --username AWS --password-stdin $REGISTRY
+
+  build:
+    commands:
+      - echo Move into correct directory
+      - cd runtimes/$RUNTIME
+
+      - echo Build, tag, and push draft image to Amazon ECR
+      - docker buildx build \
+        --platform linux/amd64,linux/arm64 \
+        --tag ${REGISTRY}/${RUNTIME}:draft-${VERSION}-${CODEBUILD_BUILD_NUMBER} \
+        --build-arg RUNTIME=${RUNTIME} \
+        --build-arg VERSION=${VERSION} \
+        --push \
+        .
