--- a/codebuild-build.yml
+++ b/codebuild-build.yml
@@ -3,25 +3,46 @@ version: 0.2
 batch:
   fast-fail: false
   build-graph:
-    - identifier: node-18
+    - identifier: node_18
       env:
         variables:
           RUNTIME: node
-          VERSION: 18
+          VERSION: "18"
       ignore-failure: false
 
-    - identifier: node-20
+    - identifier: node_20
       env:
         variables:
           RUNTIME: node
-          VERSION: 20
+          VERSION: "20"
       ignore-failure: false
 
-    - identifier: node-ci-cd-18
+    - identifier: node_ci_cd_18
       env:
         variables:
           RUNTIME: node-ci-cd
-          VERSION: 18
+          VERSION: "18"
+      ignore-failure: false
+
+    - identifier: node_ci_cd_20
+      env:
+        variables:
+          RUNTIME: node-ci-cd
+          VERSION: "20"
+      ignore-failure: false
+
+    - identifier: python_3_11
+      env:
+        variables:
+          RUNTIME: python
+          VERSION: "3.11"
+      ignore-failure: false
+
+    - identifier: python_3_12
+      env:
+        variables:
+          RUNTIME: python
+          VERSION: "3.12"
       ignore-failure: false
 
 phases:
