--- a/codebuild-publish.yml
+++ b/codebuild-publish.yml
@@ -3,50 +3,61 @@ version: 0.2
 batch:
   fast-fail: false
   build-graph:
-    - identifier: node-18
-      buildspec: codebuild-publish-inner.yml
+    - identifier: node_18
       env:
         variables:
           RUNTIME: node
-          VERSION: 18
+          VERSION: "18"
       ignore-failure: false
 
-    - identifier: node-20
-      buildspec: codebuild-publish-inner.yml
+    - identifier: node_20
       env:
         variables:
           RUNTIME: node
-          VERSION: 20
+          VERSION: "20"
       ignore-failure: false
 
-    - identifier: node-ci-cd-18
-      buildspec: codebuild-publish-inner.yml
+    - identifier: node_ci_cd_18
       env:
         variables:
           RUNTIME: node-ci-cd
-          VERSION: 18
+          VERSION: "18"
       ignore-failure: false
 
-    - identifier: node-ci-cd-20
-      buildspec: codebuild-publish-inner.yml
+    - identifier: node_ci_cd_20
       env:
         variables:
-          RUNTIME: node
-          VERSION: 20
+          RUNTIME: node-ci-cd
+          VERSION: "20"
       ignore-failure: false
 
-    - identifier: python-3.11
-      buildspec: codebuild-publish-inner.yml
-      env:
-        variables:
-          RUNTIME: python
-          VERSION: 3.11
-      ignore-failure: false
-
-    - identifier: python-3.12
-      buildspec: codebuild-publish-inner.yml
+    - identifier: python_3_11
       env:
         variables:
           RUNTIME: python
-          VERSION: 3.12
+          VERSION: "3.11"
       ignore-failure: false
+
+    - identifier: python_3_12
+      env:
+        variables:
+          RUNTIME: python
+          VERSION: "3.12"
+      ignore-failure: false
+
+phases:
+  pre_build:
+    commands:
+      - echo Login in to Amazon ECR
+      - aws ecr get-login-password --region $AWS_REGION | docker login --username AWS --password-stdin $REGISTRY
+
+  build:
+    commands:
+      - echo Publish image
+      - docker buildx imagetools create --tag ${REGISTRY}/${RUNTIME}:${VERSION} ${REGISTRY}/${RUNTIME}:draft-${VERSION}-${CODEBUILD_BUILD_NUMBER}
+
+      - echo Delete draft tag
+      - aws ecr \
+        batch-delete-image \
+        --repository-name ${RUNTIME} \
+        --image-ids imageTag=draft-${VERSION}-${CODEBUILD_BUILD_NUMBER}
