--- a/codebuild-verify.yml
+++ b/codebuild-verify.yml
@@ -3,50 +3,55 @@ version: 0.2
 batch:
   fast-fail: false
   build-graph:
-    - identifier: node-18
-      buildspec: codebuild-verify-inner.yml
+    - identifier: node_18
       env:
         variables:
           RUNTIME: node
-          VERSION: 18
+          VERSION: "18"
       ignore-failure: false
 
-    - identifier: node-20
-      buildspec: codebuild-verify-inner.yml
+    - identifier: node_20
       env:
         variables:
           RUNTIME: node
-          VERSION: 20
+          VERSION: "20"
       ignore-failure: false
 
-    - identifier: node-ci-cd-18
-      buildspec: codebuild-verify-inner.yml
+    - identifier: node_ci_cd_18
       env:
         variables:
           RUNTIME: node-ci-cd
-          VERSION: 18
+          VERSION: "18"
       ignore-failure: false
 
-    - identifier: node-ci-cd-20
-      buildspec: codebuild-verify-inner.yml
+    - identifier: node_ci_cd_20
       env:
         variables:
-          RUNTIME: node
-          VERSION: 20
+          RUNTIME: node-ci-cd
+          VERSION: "20"
       ignore-failure: false
 
-    - identifier: python-3.11
-      buildspec: codebuild-verify-inner.yml
-      env:
-        variables:
-          RUNTIME: python
-          VERSION: 3.11
-      ignore-failure: false
-
-    - identifier: python-3.12
-      buildspec: codebuild-verify-inner.yml
+    - identifier: python_3_11
       env:
         variables:
           RUNTIME: python
-          VERSION: 3.12
+          VERSION: "3.11"
       ignore-failure: false
+
+    - identifier: python_3_12
+      env:
+        variables:
+          RUNTIME: python
+          VERSION: "3.12"
+      ignore-failure: false
+
+phases:
+  pre_build:
+    commands:
+      - echo Login in to Amazon ECR
+      - aws ecr get-login-password --region eu-west-1 | docker login --username AWS --password-stdin $REGISTRY
+
+  build:
+    commands:
+      - echo Test built image
+      - docker run --entrypoint self-test ${REGISTRY}/${RUNTIME}:draft-${VERSION}-${CODEBUILD_BUILD_NUMBER}
