Use commit hash in build - CodeBuild numbers don't match.

--- a/codebuild-verify.yml
+++ b/codebuild-verify.yml
@@ -126,4 +126,4 @@ phases:
   build:
     commands:
       - echo Test built image
-      - docker run --entrypoint self-test ${REGISTRY}/${RUNTIME}:draft-${VERSION}-${ARCHITECTURE}-${CODEBUILD_BUILD_NUMBER}
+      - docker run --entrypoint self-test ${REGISTRY}/${RUNTIME}:draft-${VERSION}-${ARCHITECTURE}
