--- a/codebuild-publish.yml
+++ b/codebuild-publish.yml
@@ -54,7 +54,7 @@ phases:
   build:
     commands:
       - echo Publish image
-      - docker manifest create ${REGISTRY}/${RUNTIME}:${VERSION} ${REGISTRY}/${RUNTIME}:draft-${VERSION}-arm-${CODEBUILD_BUILD_NUMBER} ${REGISTRY}/${RUNTIME}:draft-${VERSION}-x86-${CODEBUILD_BUILD_NUMBER}
+      - docker manifest create ${REGISTRY}/${RUNTIME}:${VERSION} ${REGISTRY}/${RUNTIME}:draft-${VERSION}-arm-$(git rev-parse HEAD) ${REGISTRY}/${RUNTIME}:draft-${VERSION}-x86-$(git rev-parse HEAD)
 
       - echo Delete draft tags
-      - aws ecr batch-delete-image --repository-name ${RUNTIME} --image-ids imageTag=draft-${VERSION}-arm-${CODEBUILD_BUILD_NUMBER} imageTag=draft-${VERSION}-x86-${CODEBUILD_BUILD_NUMBER}
+      - aws ecr batch-delete-image --repository-name ${RUNTIME} --image-ids imageTag=draft-${VERSION}-arm-$(git rev-parse HEAD) imageTag=draft-${VERSION}-x86-$(git rev-parse HEAD)
