--- a/codebuild-verify.yml
+++ b/codebuild-verify.yml
@@ -125,5 +125,8 @@ phases:
 
   build:
     commands:
+      - echo Debug environment
+      - env
+
       - echo Test built image
-      - docker run --entrypoint self-test ${REGISTRY}/${RUNTIME}:draft-${VERSION}-${ARCHITECTURE}
+      - docker run --entrypoint self-test ${REGISTRY}/${RUNTIME}:draft-${VERSION}-${ARCHITECTURE}-$(git rev-parse HEAD)
