--- a/codebuild-publish.yml
+++ b/codebuild-publish.yml
@@ -54,10 +54,14 @@ phases:
   build:
     commands:
       - echo Publish ARM image
-      - docker buildx imagetools create --tag ${REGISTRY}/${RUNTIME}:${VERSION}-arm ${REGISTRY}/${RUNTIME}:draft-${VERSION}-arm-${CODEBUILD_RESOLVED_SOURCE_VERSION}
+      - docker pull ${REGISTRY}/${RUNTIME}:draft-${VERSION}-arm-${CODEBUILD_RESOLVED_SOURCE_VERSION}
+      - docker tag ${REGISTRY}/${RUNTIME}:draft-${VERSION}-arm-${CODEBUILD_RESOLVED_SOURCE_VERSION} ${REGISTRY}/${RUNTIME}:${VERSION}-arm
+      - docker push ${REGISTRY}/${RUNTIME}:${VERSION}-arm
 
       - echo Publish X86 image
-      - docker buildx imagetools create --tag ${REGISTRY}/${RUNTIME}:${VERSION}-x86 ${REGISTRY}/${RUNTIME}:draft-${VERSION}-x86-${CODEBUILD_RESOLVED_SOURCE_VERSION}
+      - docker pull ${REGISTRY}/${RUNTIME}:draft-${VERSION}-x86-${CODEBUILD_RESOLVED_SOURCE_VERSION}
+      - docker tag ${REGISTRY}/${RUNTIME}:draft-${VERSION}-x86-${CODEBUILD_RESOLVED_SOURCE_VERSION} ${REGISTRY}/${RUNTIME}:${VERSION}-x86
+      - docker push ${REGISTRY}/${RUNTIME}:${VERSION}-x86
 
       - echo Create multi-arch image
       - docker manifest create ${REGISTRY}/${RUNTIME}:${VERSION} ${REGISTRY}/${RUNTIME}:${VERSION}-arm ${REGISTRY}/${RUNTIME}:${VERSION}-x86
